# Python

./: .env.example  .gitignore  Github related .txt  Important python concepts.txt  Introduction.txt  Linux command.txt  Mysql_commands .txt  README.md  interview.py  log.html  netbot_email.py  output.xml  pyproject.toml  readME.md  report.html  test.robot
01 Python programming/: Day1  comments.py  helloworld.py  keywords.py  variables.py
BackEndAutomation/: apiValidations.py  busapi.py
Docker note/: Docker Related notes .txt
Skillovi python material/: Assignment - Python fundamentals.ipynb  DS-Assignment_01.ipynb  NumPy Reading Material.ipynb  NumPy and Pandas Interview Questions.ipynb  Pandas Reading Material - 2.ipynb  Pandas Reading Material - 3.ipynb  Pandas Reading Material - 4.ipynb  Pandas Reading Material - 5.ipynb  Pandas Reading Material - 6.ipynb  Pandas Reading Material - 7.ipynb  Pandas Reading Material -1.ipynb  Python Interview Questions.ipynb  Python Material.ipynb  (+10 more)
automation_with_selenium/: .gitattributes  .gitignore  Dockerfile  READme.md  pyproject.toml  run.bat
automation_with_selenium/configurations/: config.ini
automation_with_selenium/page_objects/: account_registration_page.py  home_page.py  login_page.py  my_account_page.py
automation_with_selenium/test_cases/: conftest.py  pytest.ini  test_001_account_registration.py  test_002_login.py  test_003_login_ddt.py
automation_with_selenium/utilities/: custom_logger.py  random_string.py  read_properties.py  xl_utils.py
language/: pyproject.toml
language/PCAP/: exception.py  module_packages_pip.py  practice.py  string_list.py
language/PCAP/module_packages_pip/: dir_module.py  maths_module.py  platform.py  python_package_installer.py  random.py  user_defined_module.py
language/PCAP/oops/: inheritance.py  oops.py
language/PCEP/: exam1.py  for_loop.py  input.py  operator.py  string_method.py  variables.py
language/PCEP/bitwise_operators/: argument_explained.py  arguments.py  dictionary.py  error_and_exceptions.py  exception_handling.py  finding_in_lists.py  functions.py  heirarchy_of_exceptions.py  iterating_list.py  list_as_argument.py  list_methods.py  lists.py  nested_lists_2d.py  nested_lists_3d.py  python_internals.py  return_statement.py  scope.py  slicing_lists.py  tuple.py  understanding_list.py
language/PCEP/modules/: comments.py  comparison_operator.py  conditional_statement.py  literals.py  loop_while.py  operator.py  print_function.py
language/advance/: Comprehensions.rtf  comprehensions.py  filetrfunction.py  lambda.py  map_function.py  note  reduce_function.py  regular_expression.py
language/interviews/: api_interview_question.py  basic_interview_question.md  fast_api.md  interview.py  interview_code.py  interview_qtion  main.py  manual_testing_interview_question.md  pytest_interview_question.md  qtion_with_answ  robot_framework_interview_quetion.py  scenario_based_interview_qtion_automation.md
language/interviews/PCAP/: mescelleneous.py  module.py  oops.py
language/linkdin/: quiz
language/linkdin/advance_classes_objects/: attribute_func.py  comparison_operator.py  enum_start.py  enums.py  numerical_operators.py  object_str.py  object_str_start.py
language/linkdin/advance_collection/: collection_overview.py  counter.py  default_dict.py  deque.py  named_tuple.py  order_dict.py  quiz
language/linkdin/advance_python_function/: docs_strings.py  kwargs_variable.py  lambda_function.py  quiz  variable_args.py
language/linkdin/builtin_function/: iter_tools.py  iterator.py  note.md  quiz  text_file.txt  transforms.py  util_funcs.py
language/linkdin/python_comprehension/: comprehensions.py  dict_comprehensions.py  list_comprehension.py  quiz  set_comprehensions.py
language/linkdin/python_language_feature/: quiz.py  strings_v_bytes.py  templete_string.py
language/linkdin/python_logging/: basic-logging.py  custom_logging.py  overview_logging  quiz
language/oops/class/: Day7  oops.py  oops1.py  oops2.py
language/oops/exception_handling/: Day10  Exceptions.py  HandlingFiles.py
language/oops/inheritance/: Day8  Inheritance.py  oops.py
language/oops/modules/: Day9  madule_path.py  my_math.py  my_platform.py  my_randam.py  packages_examples.py  quize.md
language/oops/modules/sub_module/pack1/: module2.py
language/py_dev/Section06_list_dictionaries_set/: Source.txt
language/py_dev/Section07_Conditional_in_python/: Section_notes.txt
language/py_dev/Section08_function_in_python/: Section_note.txt
language/py_dev/Section09_modules_in_python/: Source.txt
language/py_dev/Section10_error_and _exception_in_python/: section_notes.txt  source_code.txt
language/py_dev/Section11_file_handling _in_python/: source_code.txt
language/py_dev/Section12_lambda_map_filter_generator/: Section_notes.txt
language/py_dev/Section13_OOP_in_python/: source_code.txt
language/py_dev/Section16_buildingCalculatorAPPUsingTkinterModule/: source1.txt
language/py_dev/Section17_BuildingDatabaseApplicationWithPostgreSQL/: Tkinter_app.txt
language/py_dev/Section18_filecompressingand encoded in python/: source1.py  source2.py
language/py_dev/Section19_text to speach converter in python/: source1.py  source2.py
language/py_dev/Section20_password hashing/: Introduction.txt
language/py_dev/Section21_QR code generator/: source.py
language/py_dev/Section23 Credit card validation using luhns algorithms/: source.py
language/python/: ascci_character.py  my_string.py  string_compare.py
language/python/basics/: Day1  comments.py
language/python/control_statements/: TakingInputFromUser.py  positiveOrnegative.py  printweeknumber.py
language/python/data_structure1/: Day4  ListDemo.py  Tupledemo.py
language/python/data_structure2/: Setdemo.py  dictionarydemo.py
language/python/functions/: TypesofArguments.py  functions.py
language/python/loop/: jumpingstatements.py  numbersdemo.py  rangefunction.py
suites/: .gitignore  .gitlab-ci.yml  pyproject.toml
suites/sanity/: github.robot  orange_hrm.robot  schemas.robot
suites/tests/activities_apis/: activities_get_all.py
(+239 files in other folders)
