[tool.poetry]
name = "suites"
version = "0.1.0"
description = ""
authors = ["Gopalakrishna R M <gopalakrishna.rm@prodapt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
robotframework = "^7.0"
selenium = "^4.18.1"
robotframework-seleniumlibrary = "^6.2.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
